@@ -1,5 +1,5 @@
 --------------------------------------------------
-mtPaint 3.51 - Copyright (C) 2004-2021 The Authors
+mtPaint 3.51 - Copyright (C) 2004-2024 The Authors
 --------------------------------------------------
 
 See 'Credits' section for a list of the authors.
